(executable
 (name main)
 (modules main)
 (libraries fmt index.unix common cmdliner))

(executable
 (name db_bench)
 (modules db_bench)
 (libraries fmt index.unix common bigstring logs logs.fmt cmdliner))

(executable
 (name lmdb_bench)
 (modules lmdb_bench)
 (libraries fmt common lmdb bigstring rresult logs logs.fmt cmdliner))

(alias
 (name bench)
 (action
  (run ./main.exe)))

(alias
 (name runtest)
 (deps main.exe))

(library
 (name common)
 (modules common)
 (libraries index.unix logs logs.fmt))
